3 tests fail